# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    CMakeLists.txt                                     :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: abelov <abelov@student.42london.com>       +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2024/08/07 09:33:05 by abelov            #+#    #+#              #
#    Updated: 2024/08/07 09:33:05 by abelov           ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

cmake_minimum_required(VERSION 3.27)
project(leetcode C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(merge_strings)
add_subdirectory(reformat_phone_number)
add_subdirectory(gcd_of_strings)
add_subdirectory(num_to_words)
add_subdirectory(kids_with_candies)
add_subdirectory(can_place_flowers)
add_subdirectory(reverse_vowels)
add_subdirectory(reverse_strings)
add_subdirectory(product_except_self)
add_subdirectory(increasing_triplet_subsequence)
add_subdirectory(string_compression)
add_subdirectory(move_zeroes)
add_subdirectory(container_with_most_water)
add_subdirectory(max_number_of_k_sum_pairs)
add_subdirectory(maximum_average_subarray)
